// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snap render Card -- props extra 1`] = `
<view
  class="at-card"
>
  <!-- header -->
  <view
    class="at-card__header"
  >
    <!-- thumb image -->
    <view
      class="at-card__header-thumb"
    >
      <image
        class="at-card__header-thumb-info"
        mode="scaleToFill"
        src="http://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
      />
    </view>
    <!-- renderIcon -->
    <!--v-if-->
    <!-- use icon if not thumb -->
    <!--v-if-->
    <!-- title -->
    <text
      class="at-card__header-title"
    >
      这是个标题
    </text>
    <!-- extra info -->
    <text
      class="at-card__header-extra"
    >
      额外信息
    </text>
  </view>
  <!-- content -->
  <view
    class="at-card__content"
  >
    <!-- main content -->
    <view
      class="at-card__content-info"
    >
      
      这也是内容区 可以随意定义功能
      
    </view>
    <!-- content note -->
    <view
      class="at-card__content-note"
    >
      小Tips
    </view>
  </view>
</view>
`;

exports[`Card Snap render Card -- props extraStyle 1`] = `
<view
  class="at-card at-card--full"
>
  <!-- header -->
  <view
    class="at-card__header"
  >
    <!-- thumb image -->
    <view
      class="at-card__header-thumb"
    >
      <image
        class="at-card__header-thumb-info"
        mode="scaleToFill"
        src="http://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
      />
    </view>
    <!-- renderIcon -->
    <!--v-if-->
    <!-- use icon if not thumb -->
    <!--v-if-->
    <!-- title -->
    <text
      class="at-card__header-title"
    >
      这是个标题
    </text>
    <!-- extra info -->
    <text
      class="at-card__header-extra"
      style="font-size: 12px; max-width: 200px;"
    >
      额外信息
    </text>
  </view>
  <!-- content -->
  <view
    class="at-card__content"
  >
    <!-- main content -->
    <view
      class="at-card__content-info"
    >
      
      这也是内容区 可以随意定义功能
      
    </view>
    <!-- content note -->
    <view
      class="at-card__content-note"
    >
      小Tips
    </view>
  </view>
</view>
`;

exports[`Card Snap render Card -- props isFull 1`] = `
<view
  class="at-card at-card--full"
>
  <!-- header -->
  <view
    class="at-card__header"
  >
    <!-- thumb image -->
    <view
      class="at-card__header-thumb"
    >
      <image
        class="at-card__header-thumb-info"
        mode="scaleToFill"
        src="http://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
      />
    </view>
    <!-- renderIcon -->
    <!--v-if-->
    <!-- use icon if not thumb -->
    <!--v-if-->
    <!-- title -->
    <text
      class="at-card__header-title"
    >
      这是个标题
    </text>
    <!-- extra info -->
    <text
      class="at-card__header-extra"
    >
      额外信息
    </text>
  </view>
  <!-- content -->
  <view
    class="at-card__content"
  >
    <!-- main content -->
    <view
      class="at-card__content-info"
    >
      
      这也是内容区 可以随意定义功能
      
    </view>
    <!-- content note -->
    <view
      class="at-card__content-note"
    >
      小Tips
    </view>
  </view>
</view>
`;

exports[`Card Snap render Card -- props note 1`] = `
<view
  class="at-card"
>
  <!-- header -->
  <view
    class="at-card__header"
  >
    <!-- thumb image -->
    <view
      class="at-card__header-thumb"
    >
      <image
        class="at-card__header-thumb-info"
        mode="scaleToFill"
        src="http://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
      />
    </view>
    <!-- renderIcon -->
    <!--v-if-->
    <!-- use icon if not thumb -->
    <!--v-if-->
    <!-- title -->
    <text
      class="at-card__header-title"
    >
      这是个标题
    </text>
    <!-- extra info -->
    <!--v-if-->
  </view>
  <!-- content -->
  <view
    class="at-card__content"
  >
    <!-- main content -->
    <view
      class="at-card__content-info"
    >
      
      这也是内容区 可以随意定义功能
      
    </view>
    <!-- content note -->
    <view
      class="at-card__content-note"
    >
      小Tips
    </view>
  </view>
</view>
`;

exports[`Card Snap render Card -- props thumb 1`] = `
<view
  class="at-card"
>
  <!-- header -->
  <view
    class="at-card__header"
  >
    <!-- thumb image -->
    <view
      class="at-card__header-thumb"
    >
      <image
        class="at-card__header-thumb-info"
        mode="scaleToFill"
        src="http://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
      />
    </view>
    <!-- renderIcon -->
    <!--v-if-->
    <!-- use icon if not thumb -->
    <!--v-if-->
    <!-- title -->
    <text
      class="at-card__header-title"
    >
      这是个标题
    </text>
    <!-- extra info -->
    <!--v-if-->
  </view>
  <!-- content -->
  <view
    class="at-card__content"
  >
    <!-- main content -->
    <view
      class="at-card__content-info"
    >
      
      这也是内容区 可以随意定义功能
      
    </view>
    <!-- content note -->
    <!--v-if-->
  </view>
</view>
`;

exports[`Card Snap render initial Card 1`] = `
<view
  class="at-card"
>
  <!-- header -->
  <view
    class="at-card__header"
  >
    <!-- thumb image -->
    <!--v-if-->
    <!-- renderIcon -->
    <!--v-if-->
    <!-- use icon if not thumb -->
    <!--v-if-->
    <!-- title -->
    <text
      class="at-card__header-title"
    >
      这是个标题
    </text>
    <!-- extra info -->
    <!--v-if-->
  </view>
  <!-- content -->
  <view
    class="at-card__content"
  >
    <!-- main content -->
    <view
      class="at-card__content-info"
    >
      
      这也是内容区 可以随意定义功能
      
    </view>
    <!-- content note -->
    <!--v-if-->
  </view>
</view>
`;
